# LookKool

./: .env.example  .gitignore  billing_requirements.md  build-studio.bat  drizzle.config.ts  issues.md  lookkool_optimized_schema.sql  middleware.ts  next.config.mjs  package.json  plan.md  playwright.config.ts  projectstatus.md  proxy.ts  start-studio.bat  tailwind.config.ts
app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
app/(auth)/: layout.tsx
app/account/: loading.tsx  page.tsx
app/cancellation/: page.tsx
app/cart/: cart-content.tsx  loading.tsx  page.tsx
app/checkout/: checkout-content.tsx  page.tsx
app/collections/: page.tsx
app/contact/: page.tsx
app/faq/: page.tsx
app/new-arrivals/: page.tsx
app/offers/: page.tsx
app/privacy/: page.tsx
app/returns/: page.tsx
app/search/: loading.tsx  page.tsx  search-content.tsx
db/: index.ts
lib/: auth-actions.ts  auth-client.ts  auth-helpers.ts  auth.ts  cached-data.ts  constants.ts  invoice-template.ts  site-config-shared.ts  site-config.ts  tauri-print.ts  upload.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  printing.rs
supabase/: 01_rls_policies.sql  02_admin_views.sql  03_admin_functions.sql  04_triggers.sql  05_setup_first_admin.sql  06_storage_policies.sql  07_site_appearance.sql  08_enable_realtime.sql  09_variant_pricing.sql  ADMIN_GUIDE.md
types/: admin.ts  billing.ts  cart.ts  coupon.ts  customer.ts  index.ts  order.ts  product.ts  recommendation.ts  supabase.ts
(+269 files in other folders)
