[package]
name = "lookkool-studio"
version = "1.0.0"
description = "LookKool Studio - Professional Billing & Store Management"
authors = ["LookKool"]
edition = "2021"

[lib]
name = "lookkool_studio_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
